# agent-threat-detection-lab

./: .gitignore  LICENSE  Makefile  README.md  START_HERE.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/benchmark/: results.json
capstone/: brief.md
course/: syllabus.md  week-01-agent-security.md  week-02-data-and-labels.md  week-03-baselines.md  week-04-evaluation.md  week-05-transformer.md  week-06-robustness.md  week-07-llm-judge.md  week-08-agentic-investigation.md  week-09-serving.md  week-10-monitoring.md  week-11-attack-chain.md  week-12-portfolio.md
data/: README.md  sample_labels.jsonl  sample_predictions.jsonl  sample_traces.jsonl  taxonomy.md
data/benchmark/: manifest.json  traces.jsonl
docs/: learning-path.md
docs/concepts/: detection-architecture.md  evaluation-playbook.md  production-monitoring.md
examples/: run_baseline.py
labs/: 00-first-15-minutes.md  01-threat-model.md  02-dataset-design.md  03-evaluation.md
quizzes/: answers.md  foundations.md
reports/: baseline-benchmark.md  dataset-card.md  error-analysis.md  model-card.md  model-selection.md  production-readiness.md  threat-model.md
resources/: benchmarks-and-datasets.md  source-notes.md  tooling.md
scripts/: check_markdown_links.py  score_predictions.py
src/agent_threat_detection/: __init__.py  schema.py
src/agent_threat_detection/benchmark/: __init__.py  cli.py  dataset.py  evaluate.py  features.py  models.py  reporting.py  robustness.py  runner.py  (+1 more)
templates/: attack-chain.md  experiment-card.md  model-selection-memo.md  progress-log.md
tests/: test_benchmark_dataset.py  test_benchmark_features.py  test_benchmark_runner.py  test_evaluation_metrics.py  test_robustness.py  test_rules_detector.py  test_thresholds.py
(+4 files in other folders)
